--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -18,4 +18,6 @@
 \|
 = link_to 'Back', carts_path
 \|
+= button_to 'Checkout', new_order_path, method: :get
+\|
 = button_to 'Empty Cart', @cart, method: :delete, confirm: 'Are you sure?'
