--- a/app/views/order_notifier/shipped.html.haml
+++ b/app/views/order_notifier/shipped.html.haml
@@ -1,10 +1,10 @@
-%h3= Order shipped!
+%h3 Order shipped!
 %p
   This is just to let you know that we've shipped your order
 
 %table
   %tr
-    %th{ colspan="2" }
+    %th
       Qty:
     %th Description
     = render @order.line_items
